# multiagenthandson

./: .gitignore  a2as.yaml  deploy.py  pyproject.toml  requirements.txt
deploy/: deploy.py
image_scoring/: config.py  deploy.py
image_scoring/sub_agents/image/: imagen_agent.py
image_scoring/sub_agents/image/tools/: image_generation_tool.py
image_scoring_adk_a2a_server/remote_a2a/image_scoring/: .env  README.md  config.py
testclient/: a2a_client.py  a2a_test_client.py  remote_test.py
