[project]
name = "image-scoring"
version = "0.1.0"
description = "The image scoring generates an image for a news article, evaluates the image agaionst a set of rules and regenerates the image if necessary ."
license = "Apache License 2.0"
readme = "README.md"
requires-python = ">=3.10,<3.15"
packages = [{include = "image_scoring"}]

[tool.poetry]
include = ["image_scoring/.env"]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
pandas = "^2.1.1"
google-adk = { version = "==2.3.0", extras = ["eval"] }
a2a-sdk = "^0.2.16"
google-cloud-aiplatform = {extras = ["adk", "agent-engines"], version = "^1.128.0"}
google-genai = "^2.12.1"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
pillow = "^10.3.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
poetry = "^2.0.0" 
poetry-plugin-export = "^1.6.0"

[tool.poetry.group.deployment]
optional = true

[tool.poetry.group.deployment.dependencies]
absl-py = "^2.2.1"
pandas = "^2.1.1"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
